{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 23,
  "lineage": "473b5ec2-f396-8f74-25b4-8dc528c088c9",
  "resources": [
    {
      "module": "module.ec2_config",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03839f1dba75bb628",
            "arn": "arn:aws:ec2:us-west-2:116981797456:instance/i-0b1e83abb0a706c14",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b1e83abb0a706c14",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "acit_4640_lab_13",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0023e979f6e7e8161",
            "private_dns": "ip-10-0-1-254.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.254",
            "public_dns": "ec2-44-245-6-136.us-west-2.compute.amazonaws.com",
            "public_ip": "44.245.6.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f6d31957021e6232",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02c9310ee90ca9747"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01760128e2d31804b",
            "tags": {
              "Name": "lab13_w01",
              "Project": "lab13",
              "Server_Role": "web"
            },
            "tags_all": {
              "Name": "lab13_w01",
              "Project": "lab13",
              "Server_Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c9310ee90ca9747"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.main",
            "module.network.aws_subnet.subnet1",
            "module.network.aws_vpc.main",
            "module.ssh_key.aws_key_pair.main",
            "module.ssh_key.terraform_data.key_pair",
            "module.ssh_key.tls_private_key.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_config",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03839f1dba75bb628",
            "arn": "arn:aws:ec2:us-west-2:116981797456:instance/i-04f5c28a017a91d82",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f5c28a017a91d82",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "acit_4640_lab_13",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-055235cfb2127515b",
            "private_dns": "ip-10-0-2-246.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.246",
            "public_dns": "ec2-35-91-88-199.us-west-2.compute.amazonaws.com",
            "public_ip": "35.91.88.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08176d81c1083d4d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02c9310ee90ca9747"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0923a068835e30c9a",
            "tags": {
              "Name": "lab13_b01",
              "Project": "lab13",
              "Server_Role": "backend"
            },
            "tags_all": {
              "Name": "lab13_b01",
              "Project": "lab13",
              "Server_Role": "backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c9310ee90ca9747"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.main",
            "module.network.aws_subnet.subnet2",
            "module.network.aws_vpc.main",
            "module.ssh_key.aws_key_pair.main",
            "module.ssh_key.terraform_data.key_pair",
            "module.ssh_key.tls_private_key.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:116981797456:internet-gateway/igw-014f7e3562f2d0ad1",
            "id": "igw-014f7e3562f2d0ad1",
            "owner_id": "116981797456",
            "vpc_id": "vpc-060c62e9e0533f79b"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:116981797456:route-table/rtb-0160aec404909705f",
            "id": "rtb-0160aec404909705f",
            "owner_id": "116981797456",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014f7e3562f2d0ad1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-060c62e9e0533f79b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068804addb98fc565",
            "route_table_id": "rtb-0160aec404909705f",
            "subnet_id": "subnet-01760128e2d31804b"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.main",
            "module.network.aws_subnet.subnet1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f5e99d28b8f713f",
            "route_table_id": "rtb-0160aec404909705f",
            "subnet_id": "subnet-0923a068835e30c9a"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.main",
            "module.network.aws_subnet.subnet2",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:116981797456:security-group/sg-02c9310ee90ca9747",
            "description": "Allow ssh access",
            "egress": [],
            "id": "sg-02c9310ee90ca9747",
            "ingress": [],
            "name": "main",
            "name_prefix": "",
            "owner_id": "116981797456",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-060c62e9e0533f79b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:116981797456:subnet/subnet-01760128e2d31804b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01760128e2d31804b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116981797456",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-060c62e9e0533f79b"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:116981797456:subnet/subnet-0923a068835e30c9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0923a068835e30c9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116981797456",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-060c62e9e0533f79b"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:116981797456:vpc/vpc-060c62e9e0533f79b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e67faafe073d3958",
            "default_route_table_id": "rtb-00fb223b03d59faa4",
            "default_security_group_id": "sg-04c811534b407d098",
            "dhcp_options_id": "dopt-0b95e7f2199c72d4e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-060c62e9e0533f79b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00fb223b03d59faa4",
            "owner_id": "116981797456"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:116981797456:security-group-rule/sgr-0d75567b7fececef4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d75567b7fececef4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02c9310ee90ca9747",
            "security_group_rule_id": "sgr-0d75567b7fececef4",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "inside",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:116981797456:security-group-rule/sgr-01b7adf5a75ee1b3f",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01b7adf5a75ee1b3f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02c9310ee90ca9747",
            "security_group_rule_id": "sgr-01b7adf5a75ee1b3f",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "outside",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:116981797456:security-group-rule/sgr-03784cb0336b3cacb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-03784cb0336b3cacb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02c9310ee90ca9747",
            "security_group_rule_id": "sgr-03784cb0336b3cacb",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}